--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,58 @@
     font-family: 'Fredoka', sans-serif;
 }
 
+.clearfix::after{
+    content: "";
+    display: table;
+    clear: both;
+}
 
 :root{
     --title: #e43572;
+    --bg-box: #0f0e17;
+    --text: white;
+    --link: #0093e7;
 }
 
 .container{
-    max-width: 1100px;
+    max-width: 1200px;
     margin: auto;
+}
+.center{
     text-align: center;
 }
 
 h1{
     color: var(--title);
-    padding: 40px 0px;
+    padding: 3rem 0rem;
 }
+
+.box{
+    width: calc(90% / 3);
+    background-color: var(--bg-box);
+    color: var(--text);
+    margin-top: 3rem; 
+    margin: 20px;
+}
+
+img{
+    width: 90px;
+    height: 90px;
+}
+
+.left{
+    float: left;
+}
+
+a{
+    color: var(--link);
+}
+
+.padding{
+    padding: 1rem 4rem 0rem 1rem;
+}
+
+.widht{
+    width: 1180px;
+}
+
